--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ http = ["dep:chitose"]
 [dependencies]
 mlua = { version = "0.10", features = [
   "anyhow",
+  "async",
   "lua54",
   "vendored",
   "macros",
