--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ markup5ever_rcdom = { git = "https://github.com/servo/html5ever.git", branch = "
 xml5ever = { git = "https://github.com/servo/html5ever.git", branch = "main" }
 clap = { version = "4.5", features = ["derive"] }
 chitose = { version = "0.1", git = "https://github.com/s-aran/chitose.git", branch = "main", optional = true }
+encoding_rs = { version = "0.8", features = ["fast-kanji-encode", "serde"] }
 
 [profile.release]
 opt-level = 3
@@ -45,5 +46,3 @@ strip = true
 panic = 'abort'
 incremental = false
 overflow-checks = false
-
-
